--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,19 +8,19 @@
     <!-- Centered nav links container -->
     <ul style="list-style-type: none; display: flex; justify-content: center; padding: 0; margin: 0; flex: 1;">
       <li style="margin-right: 20px;">
-        <a href="/" style="color: white; text-decoration: none; font-size: 16px;">Home</a>
+        <a href="{{ site.baseurl }}/" style="color: white; text-decoration: none; font-size: 16px;">Home</a>
       </li>
       <li style="margin-right: 20px;">
-        <a href="/about/" style="color: white; text-decoration: none; font-size: 16px;">About</a>
+        <a href="{{ site.baseurl }}/about/" style="color: white; text-decoration: none; font-size: 16px;">About</a>
       </li>
       <li style="margin-right: 20px;">
-        <a href="/projects/" style="color: white; text-decoration: none; font-size: 16px;">Projects</a>
+        <a href="{{ site.baseurl }}/projects/" style="color: white; text-decoration: none; font-size: 16px;">Projects</a>
       </li>
       <li style="margin-right: 20px;">
-        <a href="/blog/" style="color: white; text-decoration: none; font-size: 16px;">Blog</a>
+        <a href="{{ site.baseurl }}/blog/" style="color: white; text-decoration: none; font-size: 16px;">Blog</a>
       </li>
       <li style="margin-right: 20px;">
-        <a href="/contact/" style="color: white; text-decoration: none; font-size: 16px;">Contact</a>
+        <a href="{{ site.baseurl }}//contact/" style="color: white; text-decoration: none; font-size: 16px;">Contact</a>
       </li>
     </ul>
 
