--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ a:hover {
 
 
 
-/* General Styling */
+/* General Styling Projects and blog */
 .container {
   max-width: 1100px;
   margin: 0 auto;
